<resources>
    <string name="app_name">TriviaApp-MissionAndroid1.1.10</string>
    <string name="trivia_app">Trivia App</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="previous_button">previous</string>
    <string name="next_button">next</string>
    <string name="_0_out_of_100">0 out of 100</string>
    <string name="this_is_a_sample_question_inside_a_card_view">This is a sample question inside a card view</string>
    <string name="correctAnswer">Correct Answer</string>
    <string name="wrongAnswer">Wrong Answer</string>
    <string name="current_score">Current Score:</string>
    <string name="high_score">High Score:</string>
    <string name="_0">0</string>
</resources>

