<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/trivia_app"
        android:textSize="26sp"
        android:fontFamily="monospace"
        android:textColor="@color/colorText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <TextView
        android:id="@+id/counterQuestions_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/_0_out_of_100"
        android:textSize="16sp"
        android:textColor="@color/colorText"
        android:textStyle="italic"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/appTitle_textView"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/questions_cardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/colorText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appTitle_textView">

        <TextView
            android:id="@+id/showQuestion_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/this_is_a_sample_question_inside_a_card_view"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/previous_button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@color/colorBackground"
        android:src="@drawable/back"
        android:layout_marginStart="5dp"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questions_cardView"
        android:contentDescription="@string/previous_button"
        />

   <Button
       android:id="@+id/true_button"
       android:layout_width="120dp"
       android:layout_height="65dp"
       android:text="@string/true_text"
       android:layout_marginTop="75dp"
       android:layout_marginStart="15dp"
       android:fontFamily="monospace"
       android:background="@color/colorText"
       android:textColor="@color/colorBackground"
       android:textSize="18sp"

       app:layout_constraintLeft_toRightOf="@id/previous_button"
       app:layout_constraintTop_toBottomOf="@id/questions_cardView"/>


    <Button
        android:id="@+id/false_button"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:text="@string/false_text"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="75dp"
        android:fontFamily="monospace"
        android:background="@color/colorText"
        android:textColor="@color/colorBackground"
        android:textSize="18sp"

        app:layout_constraintRight_toLeftOf="@id/next_button"
        app:layout_constraintTop_toBottomOf="@id/questions_cardView"/>

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@color/colorBackground"
        android:src="@drawable/next"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questions_cardView"
        android:contentDescription="@string/next_button"
        />


</androidx.constraintlayout.widget.ConstraintLayout>